<resources>
    <string name="app_name">Calculadora_IMC</string>
    <string name="estatura">Estatura</string>
    <string name="Eestatura">Escribe tu Estatura</string>
    <string name="peso">Peso</string>
    <string name="Epeso">Escribe tu Peso</string>
    <string name="calcularIMC">Calculador</string>
    <string name="resultado">Resultado</string>
    <string name="estado">Estado</string>
</resources>